<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Verbum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="highscore">Highscore</string>
    <string name="howto">How to Play</string>
    <string name="quit">Quit</string>
    <string name="main_menu">Main Menu</string>
    <string name="whats_the_word">What is the magic word?</string>
    <string name="button">BUTTON</string>
    <string name="active">ACTIVE</string>
    <string name="kills">Kills:</string>
    <string name="correct_letters">Correct Letters:</string>
    <string name="lives">Lives Left:</string>
    <string name="blank">_ _ _ _ _ _</string>
    <string name="abcdef">ABCDEF</string>
    <string name="game_over">Returning to main in 5 sec</string>
    <string name="continue_next">continue</string>
    <string name="ask_quit">Do you want to quit?</string>
    <string name="ask_yes">Yes</string>
    <string name="ask_no">No</string>
    <string name="you_lose">YOU LOSE</string>
    <string name="at_lose">GAME OVER</string>
    <string name="answer">The correct word was:</string>
    <string name="return_main">Return to Main</string>
    <string name="blank2">______</string>
    <string name="the_correct">the correct word was</string>
    <string name="correct_caps">THE CORRECT WORD IS</string>
    <string name="highscore_board">HIGHSCORES</string>
    <string name="saveScore">Save Score</string>
    <string name="enter_name">Enter Name</string>
    <string name="entername">Enter your name here</string>
    <string name="save">SAVE</string>
    <string name="streak">Streak:</string>
    

</resources>