<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_curve"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/answer_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_dia"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/active"
        android:textColor="#ff0000"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="75dp"
        android:text="@string/at_lose"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/the_correct_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_word"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/correct_caps"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/saveScore"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_save"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:text="@string/return_main"
        android:textStyle="bold" />

</RelativeLayout>