<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_curve"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/inName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|center"
        android:hint="@string/entername" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/enter_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/return_main" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/save" />

</RelativeLayout>